2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs,
	  MonoDevelop.SourceEditor/MarkerOperationsHandler.cs,
	  MonoDevelop.SourceEditor/SourceEditorCommands.cs: Urls inside the text
	  editor can now be opened using the context menu.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Fixed warning.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/gui.stetic, MonoDevelop.SourceEditor/SourceEditorView.cs: Changed
	  delete call.

2008-02-13  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Changed delete action.

2008-02-12  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.HighlightingPanel.cs,
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  gtk-gui/gui.stetic,
	  MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs, Makefile.am,
	  MonoDevelop.SourceEditor.mdp,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/HighlightPropertiesSemanticRule.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: Worked on semantic
	  highlighting - properties can now be shown as italic. (Enable it in the
	  syntax highlighting panel)

2008-02-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Improved auto insert
	  bracket.

2008-02-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: Some changes for the
	  text editor.

2008-02-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,