@@ -1,3 +1,8 @@
+2008-02-15  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Bind MonoDevelop
+	  shortcuts to editor actions.
+
 2008-02-14  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.SourceEditor.addin.xml,
